<resources>
    <string name="app_name">FlappyBird</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="base">Base</string>

    <string name="pause_game">Pause game </string>
    <string name="resume_game">Resume game</string>
    <string name="exit_to_main_menu">Back to game</string>

    <string name="flappybird">Flappy Bird</string>
    <string name="gameover">Gameover</string>
    <string name="start_game">Start Game</string>
    <string name="show_leaderboard">Show Leaderboard</string>

    <string name="leaderboard">Leaderboard</string>
    <string name="rank">Rank</string>
    <string name="nickname">Nickname</string>
    <string name="highscore">Highscore</string>

    <string name="logout">Logout</string>
    <string name="change_nickname">Change nickname</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

</resources>