<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:gravity="bottom"
    android:background="@drawable/background_night">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/login_vertical_margin">

        <ImageView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_vertical_margin"
            android:layout_marginBottom="@dimen/login_vertical_margin"
            android:layout_marginHorizontal="@dimen/login_horizontal_margin"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/title"
            android:contentDescription="@string/flappybird" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_input_margin"
            android:layout_marginTop="@dimen/login_input_margin">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:autofillHints=""
                android:hint="@string/email"
                android:text="" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_input_margin"
            android:layout_marginTop="@dimen/login_input_margin"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:autofillHints=""
                android:hint="@string/password"
                android:text="" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_vertical_margin"
            android:padding="@dimen/login_button_padding"
            android:backgroundTint="@color/yellow"
            android:text="@string/login" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/login_button_padding"
            android:backgroundTint="@color/yellow"
            android:text="@string/register" />

        <Button
            android:id="@+id/btnContinueAsGuest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/login_button_padding"
            android:backgroundTint="@color/yellow"
            android:text="@string/continue_as_guest" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/base"
            android:contentDescription="@string/base" />

    </LinearLayout>

</LinearLayout>

