<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_dirt"
    android:padding="@dimen/popup_window_horizontal_margin">

    <EditText
        android:id="@+id/etNickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nickname"
        android:inputType="text"
        android:text=""
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="@dimen/popup_window_horizontal_margin" >

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/login_button_padding"
            android:background="@drawable/button_border_white"
            android:textColor="@color/white"
            android:text="@string/save" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/login_button_padding"
            android:background="@drawable/button_border_white"
            android:textColor="@color/white"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>